--- a/Camera-Gallery/gallery.html
+++ b/Camera-Gallery/gallery.html
@@ -9,6 +9,17 @@
 </head>
 <body>
     <div class = "back">back</div>
+    <div class="gallery-cont">
+        <!-- <div class="media-cont">
+            <div class="media">
+                <video autoplay loop src="./stream (3).mp4"></video>
+            </div>
+            <div class="download action-btn">Download</div>
+            <div class="delete action-btn">Delete</div>
+        </div> -->
+    </div>
+    <script src = "db.js"></script>
+    <script src = "gallery.js"></script>
     <script>
         let backElem = document.querySelector(".back");
         backElem.addEventListener("click" , (e)=>{
